--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -65,6 +65,14 @@
 <body>
 <main>
     <div class="container">
+        <div class="col s3 spoopy-font left">
+            <p>
+                <a href="/">Home</a> | <a href="/commands">Command list</a>
+            </p>
+            <br/>
+        </div>
+        <div class="clearfix"></div>
+        
         {{ content }}
     </div>
 </main>
