--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -67,7 +67,7 @@
     <div class="container">
         <div class="col s3 spoopy-font left">
             <p>
-                <a href="/">Home</a> | <a href="/commands">Command list</a>
+                <a href="/">Home</a> | <a href="/commands">Command list</a> | <a href="/privacy">Privacy Policy</a>
             </p>
             <br/>
         </div>
